gateway-for.yaml

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: legacy-tls-route
spec:
  parentRefs:
    - name: taskcenter
      namespace: taskcenter
  hostnames:
    - "*.n.tasklab.dev"
  rules:
    - backendRefs:
        # Route to our lightweight custom pod
        - name: nginx
          port: 443
        - name: nginx
          port: 80
