httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: legacy-http-route
  namespace: 3ds
spec:
  parentRefs:
    - name: taskcenter
      sectionName: http-legacy-ndo
      namespace: taskcenter
  hostnames:
    - "*.n.tasklab.dev"
  rules:
    - backendRefs:
        - name: nginx
          port: 80
